--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" /> -->
         <!-- lightbox -->
         <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
