--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <link rel="stylesheet" href="./font-awesome.min[1].css">
         <link rel="icon" type="image/png" href="./weed.jpg">
         <link rel="icon" type="image/png" href="./flexy-logo.png">
-		<!--
+		
 	    <link rel="stylesheet" type="text/css" href="./CSS/gallery-2col.css"> 
 	    <link rel="stylesheet" type="text/css" href="./CSS/gallery-3col-mix.css">
 	    <link rel="stylesheet" type="text/css" href="./CSS/gallery-ie7.css">
@@ -57,7 +57,7 @@
         <link rel="stylesheet" type="text/css" href="./CSS/flexboxgrid.css">
         <link href="./CSS/gallery-page-HTML5.css" rel="stylesheet">
 		
-        -- Viewport for responsive web design -->
+        <-- Viewport for responsive web design -->
         <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
         <!-- All JavaScript at the bottom, except this Modernizr build.
         Modernizr enables HTML5 elements & feature detects for optimal performance.
