--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -306,7 +306,7 @@ validated.html)
             <header><!-- <div id="hdr"> changed to <header> -->
                 <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2>
-                <div class="col-12">
+                <!-- <div class="col-12">
                     <img class="logo" src="img/flexy-logo.png">
                 </div><!-- end-col-12 -->
             </header>
