--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -10,7 +10,7 @@ validated.html)
         <title>Complete Gallery page</title>
         <meta charset="utf-8">
 		<link rel="stylesheet" href="CSS/gallery-one-col.css" type="text/css" media="screen" charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="CSS/gallery-one-col.css"> 
+        <link rel="stylesheet" type="text/css" href="CSS/gallery-page-HTML5.css"> 
         <meta name="description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
 		<meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
 		<meta name="google-adsense-account" content="ca-pub-9639638377144073">
