--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -31,7 +31,7 @@ validated.html)
         <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
         <!-- lightbox -->
         <link rel="stylesheet" href="CSS/gallery-one-col.css" type="text/css" media="screen" charset="utf-8">
-		<!-- 
+		 
         <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
         <link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
@@ -41,7 +41,7 @@ validated.html)
         <link rel="stylesheet" href="./font-awesome.min[1].css">
 		<link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./style[1].css">
-        <!-- <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> --
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> 
         <link rel="stylesheet" href="./nav[1].css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
