--- a/index3.html
+++ b/index3.html
@@ -84,9 +84,9 @@
     </header>
     <div id="hnav">
         <ul>
-            <li><a title="Southbury Church Services" href="southbury-church-services.html">Services</a></li>
+            <li><a title="Southbury Church Services" href="services.html">Services</a></li>
             <li><a title="What's On" href="southbury-parish-whatson.html">What&#39;s On</a></li>
-			<li><a title="Contact Us" href="southbury-parish-contact.html">Contact Us</a></li>
+			<li><a title="Contact Us" href="index3.html">Contact Us</a></li>
         </ul>
     </div>
     <br class="clear"/><br />
@@ -94,13 +94,13 @@
         <!--side menu column starts-->
         <nav>
             <ul>
-    	        <li><a href="southbury-parish-aboutus.html" title="About us">About Us</a></li>
-                <li><a href="southbury-parish-who.html" title="Who's Who in Southbury Parish">Who&#39;s Who</a></li>
+    	        <li><a href="about.html" title="About us">About Us</a></li>
+                <li><a href="starter-page.html" title="Who's Who in Southbury Parish">Who&#39;s Who</a></li>
                 <li><a href="southbury-parish-location.html" title="Location of the parish">Find us</a></li>
                 <li><a href="southbury-parish-churches.html" title="Description of each church">Churches</a></li>
                 <li><a href="southbury-parish-activities.html" title="Parish activities and organisations">Activities</a></li>
 				<li><a href="southbury-parish-faqs.html" title="Frequently Asked Questions (Baptisms, Funerals, Weddings)">	FAQs</a></li>
-                <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
+                <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
            </ul>
         </nav><!--end of side menu column-->
         <!--start of far right column-->
