--- a/index3.html
+++ b/index3.html
@@ -134,7 +134,7 @@
 		
 
 A
-<p><a href="http://www.abilitypanel.com/index.html"><span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+<!-- <p><a href="http://www.abilitypanel.com/index.html"><span class="tiny"><br>Validated by the World Wide Web Consortium</span> -->
 
 <p><a href="https://www.acop.com/Information.aspx<span class="tiny"><br>Validated by the World Wide Web Consortium</span>
 
