--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -9,69 +9,39 @@ validated.html)
 <head>
     <meta http-equiv="Content-Type" content="text/html" ; charset="utf-8">
     <title>Complete Gallery page</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="CSS/gallery-one-col.css" type="text/css" media="screen" charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="CSS/gallery-page-HTML5.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
     <meta property="og:audio:type" content="audio/mpeg">
-    <meta property="og:description"
-        content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+    <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
     <meta property="og:image" content="image.png">
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
     <meta property="og:audio:type" content="audio/mpeg">
     <link rel="stylesheet" href="CSS/gallery-page-HTML5.css" type="text/css" media="screen" charset="utf-8">
-    <!-- lightbox --
-        <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
-    <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-    <link rel="stylesheet" href="../jQuery-novice-to-ninja/chapter_04/03_jcrop/jquery.Jcrop.css" type="text/css" media="screen" charset="utf-8" />
-    <!--
-        <link rel="stylesheet" href="CSS/lightbox.css" type="text/css" media="screen" charset="utf-8">
-        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-
-        <link rel="stylesheet" href="./font-awesome.min[1].css">
-
-        <link rel="stylesheet" href="./nav[1].css">
-        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel="stylesheet" href="./font-awesome.min[1].css">
-	
-        <link rel="icon" type="image/png" href="./weed.jpg">
-	    -->
     <link rel="icon" type="image/png" href="./flexy-logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <link rel="icon" type="image/png" href="./flexy-logo.png">
-    <link rel=”stylesheet” href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css">
-    <!-- Font Awesome Icons --
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css">
-    <!-- Plugin CSS --
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-    <!--Add conditional Javascript-->
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
     <!-- Favicon-->
     <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
     <link rel="alternate" type="application/pdf" href="MainPage.pdf">
-    <link rel="author" href="mailto:bakerorris0@gmail.com">
-
+    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
     <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- SimpleLightbox plugin CSS--
+    <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
-    <!-- Core theme CSS (includes Bootstrap)--
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css"> 
--->
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link rel="stylesheet" href="https://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <!--conditional Javascript added-->
     <!--[if lte IE 8]>
-            <script src="html5.js"></script>
-        <![endif]-->
+        <script src="html5.js"></script>
+    <![endif]-->
 </head>
 
 <body>
