--- a/gallery-3col-mix.html
+++ b/gallery-3col-mix.html
@@ -59,8 +59,7 @@
                     alt="Validated HTML5" title="Validated HTML5"></a>
         </p>
         <p>
-            <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31"
-                    title="Valid CSS!" alt="Valid CSS!"></a>
+            <a href="http://jigsaw.w3.org/css-validator/"><img src="images/vcss-blue.gif" width="88" height="31" title="Valid CSS!" alt="Valid CSS!"></a>
             <span class="small"><br><br>Markup Validated by the World Wide Web Consortium</span>
         </p>
         <br class="clear">
