--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -5,9 +5,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- meta details go here -->
-    <title>Test page for semantic tags </title>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Hello, world!</title>
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
@@ -70,6 +74,7 @@
     <!--[if lte IE 8]>
 		<script src="html5.js"></script>
     <![endif]-->
+    <title>Test page for semantic tags </title>
 </head>
 
 <body>
