--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -8,8 +8,6 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
@@ -26,7 +24,7 @@
     <script src=”js/jquery.mobile-1.0.1.min.js”></script>
     <script type=”text/javascript” src=”assets/js/ui.js”></script>
     <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
-    <script type="text/javascript" src="scripts.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
@@ -68,11 +66,13 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Test page for semantic tags </title>
     <!--Add conditional Javascript-->
     <!--[if lte IE 8]>
 		<script src="html5.js"></script>
     <![endif]-->
-    <title>Test page for semantic tags </title>
+</head>
+    
 </head>
 
 <body>
