--- a/index3.html
+++ b/index3.html
@@ -63,22 +63,6 @@
 <body>
 <a id="top"></a>
 <div id="container">
-	<!-- <div class="row">
-        <div class="col-12">
-            <nav role="navigation" id="hnav">
-                <input class="trigger" type="checkbox" id="mainNavButton">
-                <label for="mainNavButton" onclick>Menu</label>
-                <ul>
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./index[1].html">About Us</a></li>
-                    <li><a href="./membership.html">Products</a></li>
-                    <li><a href="./news.html">Blog</a></li>
-                    <li><a href="./starter-page.html">Specials</a></li>
-                    <li><a href="./welcome.html">Contact</a></li>
-                </ul>
-            </nav>
-        </div><!-- col-12 --
-    </div><!-- end-.row -->
     <header>
         <h1>THE PARISH OF ST.DAVIDS</h1>
     </header>
@@ -91,7 +75,32 @@
     </div>
     <br class="clear"/><br />
     <div id="main-content"><br />
-        <!--side menu column starts-->
+        <div id="content">
+            <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+            <div id="leftcol">
+                <h3>Cottages, converted barns, caravans</h3>
+                <img alt="cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb
+                interior of one of our cottages
+            </div>
+            <div id="rightcol">
+                <nav>
+                    <ul>
+                    <li><a href="background-ex7-transp.html" title="Accommodation">Accommodation</a></li>
+                    <li><a href="starter-page.html" title="Location Maps">Maps</a></li>
+                    <li><a href="gallery-page-validated.html" title="Frequently Asked Questions">Information</a></li>
+                    <li><a href="index.html" title="Local attractions">Attractions</a></li>
+                    <li><a href="index3.html" title="Contact us">Contact Us</a></li>
+                    <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                </ul>
+                </nav>
+            </div><!--end of side menu column-->
+            <div id="midcol">
+                <h3>All situated in the beautiful rolling countryside of Bermuda</h3>
+                <img alt="Devon countryside" height="229" src="images/devon420.jpg" width="419">
+            </div>
+            <br class="clear">
+        </div><!--content closed-->
+        <!--side menu column starts--
         <nav>
             <ul>
     	        <li><a href="about.html" title="About us">About Us</a></li>
