--- a/index3.html
+++ b/index3.html
@@ -21,28 +21,28 @@
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-        <link rel="stylesheet" href="./font-awesome.min[1].css">
+        <!--
 	    <link rel="icon" type="image/png" href="./weed.jpg">
 	    <link rel="icon" type="image/png" href="./flexy-logo.png">
         <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
-		<!-- Font Awesome Icons -->
+		<!-- Font Awesome Icons --
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-        <!-- Plugin CSS -->
+        <!-- Plugin CSS --
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 	    <!--Add conditional Javascript-->
-        <!-- Favicon-->	            
+        <!-- Favicon--	            
         <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
         <link rel="alternate" type="application/pdf" href="MainPage.pdf">
 	    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
 	    <link rel="author" type="text/html" href="https://orris0.github.io/">
-        <!-- Bootstrap Icons-->
+        <!-- Bootstrap Icons--
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-        <!-- SimpleLightbox plugin CSS-->
+        <!-- SimpleLightbox plugin CSS--
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet">
-        <!-- Core theme CSS (includes Bootstrap)-->                      
+        <!-- Core theme CSS (includes Bootstrap)--                     
 	    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
