--- a/index3.html
+++ b/index3.html
@@ -113,7 +113,7 @@
                 <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
            </ul>
         </nav><!--end of side menu column-->
-        <!--start of far right column-->
+        <!--start of far right column--
         <div id="creditcol"><br>
             <img alt="Church logo" title="Church logo" src="images/churchlogo.jpg">
  		    <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a><img src="../../Apress%20Images%20for%20docs/Ch04%20Rollover%20Navigation%20Menus/images%20for%20docs/HTML5_Logo_64.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">
