--- a/index3.html
+++ b/index3.html
@@ -29,7 +29,7 @@
 <a id="top"></a>
 <div id="container">
     <header>
-        <h1>THE PARISH OF ST.DAVIDS</h1>
+        <h1>Tourorris&#39;s Rural Retreats</h1>
     </header>
     <div id="hnav">
         <ul>
