--- a/index3.html
+++ b/index3.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:ng-app lang="en">
     <head>
         <title>Contact page for the parish of Southbury, Devon</title>
-		<script type="text/javascript" src="jquery-1.7-min.js"></script>
+		<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="./scripts.js"></script>
         <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
