--- a/starter-page.html
+++ b/starter-page.html
@@ -16,7 +16,7 @@
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
         <link rel="stylesheet" type="text/css" href="horiz-vert-menu.css">
-        <!-- <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css"> 
+        <link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css"> 
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
