--- a/starter-page.html
+++ b/starter-page.html
@@ -38,8 +38,8 @@
 			<li><a title="Contact Us" href="index3.html">Contact Us</a></li>
         </ul>
     </div>
-    <br class="clear"/><br />
-    <div id="main-content"><br />
+    <br class="clear"/><br>
+    <div id="main-content"><br>
        <!-- <div id="content">
             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
             <div id="leftcol">
@@ -77,14 +77,14 @@
                 <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
            </ul>
         </nav><!--end of side menu column-->
-        <!--start of far right column--
+        <!--start of far right column-->
         <div id="creditcol"><br>
             <img alt="Church logo" title="Church logo" src="images/churchlogo.jpg">
  		    <p><a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a><img src="../../Apress%20Images%20for%20docs/Ch04%20Rollover%20Navigation%20Menus/images%20for%20docs/HTML5_Logo_64.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">
                 <span class="tiny"><br>Validated by the World Wide Web Consortium</span></a></p>
 		    <p><span class="tiny">Website design and production by<br> O Baker Web Design</span></p>
         </div>
-        <!--
+        
         <div id="midcontent">
             <h2>CONTACT US</h2><br>
         <div id="mid-left-col">   
@@ -97,9 +97,9 @@
         <div id="mid-right-col">
             <img class="cntr" title="Southbury Church" alt="Southbury Church" height="172" src="images/southbury220.jpg" width="220">
         </div>
-        </div> -->
+        </div> 
     </div>
-    <br class="clear" />    
+    <br class="clear">    
     <!-- Footer 
     <footer class="w3-light-grey">-->
 		<footer class="data" id="html5style2footer">
