--- a/starter-page.html
+++ b/starter-page.html
@@ -40,7 +40,7 @@
     </div>
     <br class="clear"/><br>
     <div id="main-content"><br>
-       <!-- <div id="content">
+        <div id="content">
             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
             <div id="leftcol">
                 <h3>Cottages, converted barns, caravans</h3>
@@ -58,7 +58,7 @@
                     <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                 </ul>
                 </nav>
-            </div><!--end of side menu column--
+            </div><!--end of side menu column-->
             <div id="midcol">
                 <h3>All situated in the beautiful rolling countryside of Bermuda</h3>
                 <img alt="Devon countryside" height="229" src="images/devon420.jpg" width="419">
