--- a/starter-page.html
+++ b/starter-page.html
@@ -85,7 +85,7 @@
 		    <p><span class="tiny">Website design and production by<br> O Baker Web Design</span></p>
         </div>
         
-        <div id="midcontent">
+        <!-- <div id="midcontent">
             <h2>CONTACT US</h2><br>
         <div id="mid-left-col">   
 	 	    <h2>Contact James Miller</h2>
@@ -100,8 +100,7 @@
         </div> 
     </div>
     <br class="clear">    
-    <!-- Footer 
-    <footer class="w3-light-grey">-->
+    -->
 		<footer class="data" id="html5style2footer">
             <div class="footer-inner">
                 <div class="company-details">
