--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
     <!--[if lte IE 8]>
             <script src="js/html5.js" type="text/javascript"></script>
         <![endif]-->
-</head>
-<body>
-<div id="container">
-<header>
- <h1>This is a tab menu</h1>
-</header>
+    </head>
+    <body>
+        <div id="container">
+            <header class="data" id="html5style2header">
+                <h1 id="html5style2h1">StarTrackr!</h1>
+            </header>
 <nav>
  <ul>
  <li><a class="active" href="index.html">Home Page</a></li>
