--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons --
 		<link rel="stylesheet" type="text/css" href="CSS/css/index-973f48a9b2be581a2212ac40e39a92258a3d10ae46dc49036c6a35.css"> 
-		<link href="CSS/css/headers.css" rel="stylesheet"> --
-        <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8" /> -->
+		<link href="CSS/css/headers.css" rel="stylesheet"> -->
+        <link rel="stylesheet" href="CSS/squaretabs.css" type="text/css" media="screen" charset="utf-8" /> -->
         <!-- lightbox -->
         <link rel="stylesheet" href="CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8">
 		<!-- <link rel="stylesheet" href="CSS/transparent.css" type="text/css" media="screen" charset="utf-8">
